# AI-advent-challenge

./: .gitignore  04-mcp-summary.md  5_неделя_6_поток_v1.md  CLAUDE.md  JOURNAL-week1.md  JOURNAL-week2.md  JOURNAL-week3.md  JOURNAL-week4.md  JOURNAL-week5.md  JOURNAL-week6.md  JOURNAL-week7.md  LICENSE  README.md  boot.sh  chat.bat  chat.py
.github/workflows/: ai-review.yml
week1/day1/: day1.py
week1/day2/: day2.py
week1/day3/: day3.py
week1/day4/: day4.py
week1/day5/: day5.py
week2/day10/: agent10.py  compare10.py  compare10_branching.json  pyproject.toml
week2/day6/: agent.py  pyproject.toml
week2/day7/: agent7.py  history.json  pyproject.toml
week2/day8/: agent8.py  history.json  pyproject.toml
week2/day9/: agent9.py  compare.py  pyproject.toml
week3/: pyproject.toml
week3/assistant/: cli.py  cli11.py  demo11.py  invariants.py  memory.py  profile.py  prompt_builder.py  state.py  swarm.py  validator.py
week4/: pyproject.toml
week4/agent/: cli.py  mcp_agent.py  mcp_client.py
week4/agent/server/: app.py  pipeline.py  pipeline_app.py  scheduler.py  scheduler_app.py  wiki.py  wiki_app.py
week5/: .gitignore  pyproject.toml
week5/rag/: chunking.py  cli.py  corpus.py  embedder.py  evalset.py  index.py  llm.py  rag.py  retrieval.py  taskmemory.py
week6/: pyproject.toml
week6/deploy/: README.md  install.sh  nginx.conf  tunnel.sh
week6/local/: cli.py  localllm.py  ragbridge.py
week6/local/pet/: app.py  limits.py  page.py  persona.py  state.py
week7/: pyproject.toml
week7/data/: faq.md  tickets.json
week7/demo/: summarize_journal.py
week7/devassist/: agentloop.py  assistant.py  chunking.py  cli.py  config.py  corpus.py  devagent.py  embedder.py  executor.py  index.py  llm.py  mcp_bridge.py  metrics.py  qa.py  registry.py  retrieval.py  review.py  status.py  subagents.py  support.py  tools_project.py  tools_tickets.py
week7/devassist/servers/: project_app.py  tickets_app.py
