[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-week3-assistant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["requests", "rich", "prompt_toolkit"]

[project.scripts]
agent11 = "assistant.cli:main"

[tool.setuptools]
packages = ["assistant"]
